--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
+    "express": "^4.19.2",
     "js-cookie": "^3.0.1",
     "mui-one-time-password-input": "^1.0.4",
     "notistack": "^2.0.8",
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env SECRET_KEY=Harekrishna react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -56,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
